--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,66 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>4</groupId>
-  <artifactId>5</artifactId>
+  <groupId>com.mycompany.app</groupId>
+  <artifactId>my-app</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Test</name>
   <description>Simple Test</description>
+  <repositories>
+    <repository>
+    	<id>xtend</id>
+    	<url>http://build.eclipse.org/common/xtend/maven/</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+    	<id>xtend</id>
+    	<url>http://build.eclipse.org/common/xtend/maven/</url>
+    </pluginRepository>
+  </pluginRepositories>
+  <dependencies>
+    <dependency>
+    	<groupId>org.eclipse.xtend</groupId>
+    	<artifactId>org.eclipse.xtend.lib</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>org.xerial</groupId>
+    	<artifactId>sqlite-jdbc</artifactId>
+    	<version>3.7.2</version>
+    </dependency>
+  </dependencies>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.eclipse.xtend</groupId>
+  			<artifactId>org.eclipse.xtend.lib</artifactId>
+  			<version>2.3.0</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
+  <build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>fully.qualified.MainClass</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+        </plugin>
+    </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/xtend</directory>
+        <excludes>
+          <exclude>**/*.xtend</exclude>
+          <exclude>**/*</exclude>
+        </excludes>
+      </resource>
+    </resources>
+</build>
 </project>
