--- a/pom.xml
+++ b/pom.xml
@@ -52,15 +52,65 @@
                 </descriptorRefs>
             </configuration>
         </plugin>
+        <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>build-helper-maven-plugin</artifactId>
+	        <version>1.1</version>
+	        <executions>
+	          <execution>
+	            <id>add-source</id>
+	            <phase>generate-sources</phase>
+	            <goals>
+	              <goal>add-source</goal>
+	            </goals>
+	            <configuration>
+	              <sources>
+	                <source>src/main/xtend-gen/</source>
+	              </sources>
+	            </configuration>
+	          </execution>
+	        </executions>
+      </plugin>
+		  <plugin>
+			<artifactId>maven-clean-plugin</artifactId>
+			<version>2.4.1</version>
+			<configuration>
+				<filesets>
+					<fileset>
+						<directory>src/main/xtend-gen</directory>
+						<includes>
+							<include>**</include>
+						</includes>
+					</fileset>
+				</filesets>
+			</configuration>
+		</plugin>
+		    <plugin>
+			    <groupId>org.eclipse.xtend</groupId>
+			    <artifactId>xtend-maven-plugin</artifactId>
+			    <version>2.3.0</version>
+			    <executions>
+				    <execution>
+					    <goals>
+						    <goal>compile</goal>
+						    <goal>testCompile</goal>
+					    </goals>
+				    </execution>
+			    </executions>
+    		</plugin>
     </plugins>
     <resources>
       <resource>
-        <directory>src/main/xtend</directory>
+        <directory>src/main/xtend-gen/</directory>
         <excludes>
-          <exclude>**/*.xtend</exclude>
-          <exclude>**/*</exclude>
+          <exclude>**/*._trace</exclude>
+          <exclude>**/*.java</exclude>
         </excludes>
       </resource>
+    
     </resources>
 </build>
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
